# kaloricketabulky

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: create-release-branch.yml  docs.yml  lint.yml  pytest.yml  release.yml
docs/: gen_ref_pages.py  index.md  usage.md
scripts/: anonymize_samples.py
src/kaloricketabulky/: __init__.py  __main__.py  config.py
src/kaloricketabulky/sdk/: __init__.py  _dates.py  _numbers.py  auth.py  client.py  errors.py
src/kaloricketabulky/sdk/models/: __init__.py  common.py  diary.py  snapshot.py  summary.py  tips.py
tests/: test_cli.py  test_config.py  test_package.py
tests/fixtures/: diary_summary.json  snap_drink.json  snap_energy.json  snap_nutrients.json  snap_optional.json  snap_weight.json  stats_summary.json  user_diary.json  user_tips.json
tests/sdk/: test_auth.py  test_client.py  test_dates.py  test_errors.py  test_fixtures.py  test_numbers.py  test_public_api.py
tests/sdk/models/: test_common.py  test_diary.py  test_snapshot.py  test_summary.py  test_tips.py
