[project]
name = "kaloricketabulky-sdk"
version = "0.1.0"
description = "Typesafe async read-only SDK for the kaloricketabulky.cz internal API."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tomas Votava", email = "info@tomasvotava.eu" }]
requires-python = ">=3.12"
keywords = ["kaloricketabulky", "sdk", "calories", "nutrition", "async", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.10.6,<3",
    "env-proxy>=1.1.1,<2",
    "python-dotenv>=1.0.1,<2",
    "tzdata>=2026.2 ; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/tomasvotava/kaloricketabulky"
Documentation = "https://tomasvotava.github.io/kaloricketabulky/"
Repository = "https://github.com/tomasvotava/kaloricketabulky"
Changelog = "https://github.com/tomasvotava/kaloricketabulky/blob/master/CHANGELOG.md"

[project.scripts]
kaloricketabulky = "kaloricketabulky.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaloricketabulky"]

[dependency-groups]
dev = [
    "ruff>=0.9.10,<0.18",
    "mypy>=1.15,<3",
    "pytest>=8.3.5,<11",
    "pytest-cov>=6,<8",
    "pytest-asyncio>=0.25.3,<2",
    "commitizen>=4.4.1,<5",
    "pre-commit>=4.6,<5",
]
docs = [
    "griffe-pydantic>=1.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "S",
    "A",
    "DTZ",
    "PT",
    "SIM",
    "PTH",
    "PD",
    "RUF",
    "T20",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # allow asserts in tests
    "RUF018", # allow asserts with walrus in tests
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = [
    "-vv",
    "--cov=kaloricketabulky",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "tests/",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
